--- a/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
+++ b/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="accept_modify_call_request_prompt">Acceptați modificarea solicitării de apel?</string>
     <string name="add_vm_number_str">Adăugaţi numărul</string>
+    <string name="antispam_local_marked">Marcat local</string>
     <string name="antispam_marked_count">Etichetat de %1$d utilizatori MIUI</string>
     <string name="antispam_marked_title">%1$s</string>
     <string name="antispam_notification_title">Număr necunoscut</string>
@@ -15,11 +16,6 @@
     <string name="callFailed_dsac_restricted">Toate apelurile sunt restricţionate de controlul de acces.</string>
     <string name="callFailed_dsac_restricted_emergency">Apelurile de urgenţă sunt restricţionate de controlul de acces.</string>
     <string name="callFailed_dsac_restricted_normal">Apelurile normale sunt restricţionate de controlul de acces.</string>
-    <string name="callFailed_dsac_vt_bear_not_authorized">Apelul video nu poate fi efectuat. Serviciul video-telefonie nu este activat pentru acest SIM, apelaţi prin apel vocal?</string>
-    <string name="callFailed_dsac_vt_bearer_not_avail">Apelul video nu poate fi efectuat. Apelaţi prin apel vocal?</string>
-    <string name="callFailed_dsac_vt_incompatible_destination">Apelul video nu poate fi efectuat. Telefonul destinatarului nu permite apel video, apelaţi prin apel vocal?</string>
-    <string name="callFailed_dsac_vt_out_of_3G_yourphone">Telefonul dvs. este în afara ariei de acoperire a serviciului 3G. Apelaţi prin apel vocal?</string>
-    <string name="callFailed_dsac_vt_resource_unavailable">Apelul video nu poate fi efectuat. Telefonul destinatarului nu este în aria de acoperire a serviciului 3G, apelaţi prin apel vocal?</string>
     <string name="callFailed_fdn_only">Apelurile trimise sunt restricţionate de FDN.</string>
     <string name="callFailed_incoming_cb_enabled">Toate apelurile primite sunt blocate.</string>
     <string name="callFailed_invalid_credentials">Nume de utilizator sau parolă incorecte</string>
@@ -32,15 +28,13 @@
     <string name="callFailed_server_error">Eroare de server. Încercaţi din nou mai târziu.</string>
     <string name="callFailed_server_unreachable">Server inaccesibil</string>
     <string name="callFailed_simError">Eroare de SIM</string>
-    <string name="callFailed_simError_cdma">Nu există UIM/SIM sau a apărut o eroare de UIM/SIM</string>
-    <string name="callFailed_simError_slotNumber">Niciun SIM sau eroare de SIM în slotul %s</string>
     <string name="callFailed_timedOut">Fără răspuns de la server</string>
     <string name="callFailed_unobtainable_number">Număr greşit</string>
     <string name="callFailed_userBusy">Linie ocupată</string>
     <string name="callUnanswered_forwarded">Apel pierdut redirecţionat</string>
+    <string name="call_button_dialer_text">Tastatură</string>
+    <string name="call_button_tools_text">Caracteristică</string>
     <string name="call_contacts_deny_permission_msg">"Ați refuzat permisiunea de citire contacte; nu se pot afișa detaliile contactelor."</string>
-    <string name="call_additional_sum">Altele</string>
-    <string name="call_barring_sum">Setări pentru restricţionarea apelurilor vocale</string>
     <string name="call_description_recording">Înregistrare…</string>
     <string name="call_extension_conference_mode">Modul Conferinţă</string>
     <string name="call_record_button_label">Înregistrare %s</string>
@@ -57,14 +51,12 @@
     <string name="call_recording_notification_message_sd_unmounted">Card SD eliminat.</string>
     <string name="call_recording_notification_title">Apel înregistrat</string>
     <string name="call_recording_notification_title_error">Nu s-a putut înregistra apelul</string>
-    <string name="call_self">Nu puteţi apela numărul propriu</string>
     <string name="call_title_redialing_with_times">Reapelat de %d ori</string>
     <string name="caller_manage_header">Teleconferinţă %s</string>
-    <string name="caller_manage_manage_done_text">Înapoi la apel</string>
     <string name="calling_via_template">Se apelează prin %s</string>
     <string name="can_not_call_oneself">"Nu se poate apela acest număr"</string>
+    <string name="can_not_use">"Nu se poate utiliza"</string>
     <string name="cancel">Anulaţi</string>
-    <string name="cancel_call">Închideţi</string>
     <string name="card_title_call_ended">"Apel încheiat "</string>
     <string name="card_title_conf_call">Teleconferinţă</string>
     <string name="card_title_dialing">Apelare</string>
@@ -73,7 +65,6 @@
     <string name="card_title_in_call_short">Apel</string>
     <string name="card_title_incoming_call">Apel</string>
     <string name="card_title_incoming_conference">Invitație la conferință</string>
-    <string name="card_title_incoming_vt_call">Apel video</string>
     <string name="card_title_on_hold">"Apel menţinut "</string>
     <string name="card_title_threeway_call">Apel cu trei căi</string>
     <string name="card_title_upgrade_video_call_error">"Nu s-a putut actualiza videoclipul"</string>
@@ -110,7 +101,6 @@
     <string name="description_image_button_two">doi</string>
     <string name="description_image_button_zero">zero</string>
     <string name="description_target_answer">Răspundeţi</string>
-    <string name="dial_with_gsm_phone">Apel obişnuit</string>
     <string name="dialog_activate_livetalk">Verificați numărul</string>
     <string name="dialog_call_ordinary_telephone">Apel obișnuit</string>
     <string name="dialog_purchase">Suplimentați</string>
@@ -128,9 +118,14 @@
     <string name="incall_error_supp_service_switch">Apelurile nu pot fi comutate.</string>
     <string name="incall_error_supp_service_transfer">Apelul nu poate fi transferat.</string>
     <string name="incall_error_supp_service_unknown">Serviciu neacceptat.</string>
-    <string name="incall_toast_unhold">Reluaţi</string>
     <string name="incoming_answer_voice_text">Răspuns vocal</string>
     <string name="incoming_call_forwarded_title">Apel primit redirecţionat</string>
+    <string name="incoming_circle_text_answer">Apel ratat?</string>
+    <string name="incoming_circle_text_answer_p">Slider răspuns?</string>
+  <string name="incoming_circle_text_message">Loosen SMS reply</string>
+  <string name="incoming_circle_text_message_p">SMS reply slide</string>
+  <string name="incoming_circle_text_reject">Loosen reject</string>
+  <string name="incoming_circle_text_reject_p">Rejecting slide</string>
     <string name="ivr_menu_dialing_msg">Redirecţionare…</string>
     <string name="ivr_menu_dialing_msg_no_mute">Mergeţi la serviciul selectat…[Corecția automată a erorilor este activată]</string>
     <string name="ivr_menu_list_sub_menu_count_format">Apăsaţi %s</string>
@@ -143,10 +138,10 @@
     <string name="livetalk_dial">Utilizare Pachete de suplinire</string>
     <string name="livetalk_hangup">Încheiați apelul</string>
     <string name="livetalk_left_minute">%s minute rămase</string>
-    <string name="livetalk_waiting">În așteptare…</string>
     <string name="manageConferenceLabel">Gestionaţi teleconferinţa</string>
     <string name="miprofile_stranger_card">Necunoscută</string>
-    <string name="modify_call_failure_str">Modificarea solicitării de apel nu a reușit\n</string>
+    <string name="modify_call_failure_str">"Modificarea solicitării de apel nu a reușit
+"</string>
     <string name="modify_call_option_title">Ce tip de apel?</string>
     <string name="modify_call_option_voice">Doar voce</string>
     <string name="modify_call_option_vt">Video</string>
@@ -154,24 +149,6 @@
     <string name="modify_call_option_vt_tx">Transmitere video</string>
     <string name="modify_call_prompt_no">Nu</string>
     <string name="modify_call_prompt_yes">Da</string>
-    <string name="more_string">+%1$s</string>
-    <string name="mt_code_additional_call_forwarded">Apel adiţional primit redirecţionat</string>
-    <string name="mt_code_call_connected_ect">Transferare apel activă</string>
-    <string name="mt_code_call_connecting_ect">Transferare apel</string>
-    <string name="mt_code_call_on_hold">Apel menţinut</string>
-    <string name="mt_code_call_retrieved">Apel recuperat</string>
-    <string name="mt_code_cug_call">CUG</string>
-    <string name="mt_code_deflected_call">Apel deviat</string>
-    <string name="mt_code_forward_check_received">Mesaj verificare redirecţionare recepţionat</string>
-    <string name="mt_code_forwarded_call">Apel redirecţionat</string>
-    <string name="mt_code_forwarded_cf">Apel redirecţionat</string>
-    <string name="mt_code_forwarded_cf_busy">Apel ocupat redirecţionat</string>
-    <string name="mt_code_forwarded_cf_cond">Apel redirecţionat condiţionat</string>
-    <string name="mt_code_forwarded_cf_no_reply">Apel redirecţionat din lipsă răspuns</string>
-    <string name="mt_code_forwarded_cf_not_reachable">Apel redirecţionat la inaccesibil</string>
-    <string name="mt_code_forwarded_cf_uncond">Apel redirecţionat necondiţionat</string>
-    <string name="mt_code_multi_party_call">Apel conferinţă</string>
-    <string name="mt_code_on_hold_call_released">Apel menţinut eliberat</string>
     <string name="msim_select_default_time_left">(%d s)</string>
     <string name="network_error_message">Încercați să efectuaţi un apel obișnuit. Acesta va fi taxat de către operator.</string>
     <string name="network_error_title">Eroare de reţea</string>
@@ -218,7 +195,9 @@
     <string name="onscreen_close_preview_camera">Închideți camera</string>
     <string name="onscreen_hold_text">Menţinere</string>
     <string name="onscreen_merge_calls_text">Îmbinare apeluri</string>
+    <string name="onscreen_mi_support_calls_text">Suport Mi</string>
     <string name="onscreen_mute_text">Mut</string>
+    <string name="onscreen_note_calls_text">Notă</string>
     <string name="onscreen_rcs_text">Mesaje</string>
     <string name="onscreen_swap_calls_text">Schimbare</string>
     <string name="onscreen_switch_camera">Comutați camera</string>
@@ -228,8 +207,9 @@
     <string name="phone_info_divider">" ｜ "</string>
     <string name="picking_participant">Se obțin informațiile despre contact…</string>
     <string name="private_num">Număr privat</string>
-    <string name="purchase_now">Suplinire</string>
     <string name="respond_via_sms_custom_message">Mesaj personalizat</string>
+    <string name="select_audio_dialog_title">Selectați modul de răspuns</string>
+    <string name="select_one_sim_title">Se poate utiliza doar SIM %1$d</string>
     <string name="select_sim_hint">"Nu se poate utiliza cartela SIM %2$d, în timp ce SIM %1$d este în uz."</string>
     <string name="select_voice_call_sim">Selectaţi cartela SIM</string>
     <string name="separate_from_conference">Separaţi apelul</string>
@@ -237,11 +217,10 @@
     <string name="time_left_livetalk">(%ds)</string>
     <string name="unknown">Necunoscut</string>
     <string name="upgrade_vt_prompt">Doriți să treceţi la apel video?</string>
-    <string name="upgrade_vt_rx_prompt">Doriți să treceţi la apel video pentru apelurile primite?</string>
-    <string name="upgrade_vt_tx_prompt">Doriți să treceţi la apel video pentru apelurile efectuate?</string>
     <string name="video_call_not_allowed_if_tty_enabled">Opriți mai întâi modul TTY</string>
     <string name="video_switch_to_voice_call_prompt">Comutați la apel vocal</string>
     <string name="voicemail">Căsuța vocală</string>
-    <string name="wait_prompt_str">Trimiteţi următoarele tonuri?\n</string>
+    <string name="wait_prompt_str">"Trimiteţi următoarele tonuri?
+"</string>
     <string name="waiting_close_airplane_mode">Doar o secundă…</string>
 </resources>
